@@ -350,6 +350,13 @@ dt {
       <dt>Edit Search</dt>
       <dd>This allows you to edit the search type and data associated with the Results Window.</dd>
       
+      <dt>Filter</dt>
+      <dd>This allows you to filter the search results, creating a new Results Window containing 
+      the matching items. To filter using a numerical relation, enter the relation (for example, 
+      greater than or equal to <code>&gt;=</code>) followed by the number. If the filter 
+      (<code>&gt;=10</code>) is applied to the <strong>Length</strong> column, all items with a 
+      length greater than or equal 10 will be displayed.</dd>
+      
       <dt>Intersect</dt>
       <dd>This allows you to select another Results Window. It then creates a third Results Window
       in which the search results present in both Results Windows are displayed. This allows you
