@@ -4,6 +4,7 @@ Process Hacker
  * Fixed memory leak with process icons
  * Removed useless starting "\" in account names
  * Fixed group menu item enabling and disabling
+ * Added filtering of search results
 
 1.1.4.5
  * Fixed crash when attempting to open privileges for System on XP
